--- a/fcstyle.css
+++ b/fcstyle.css
@@ -10,7 +10,7 @@ body {
 }
 .h2{
     color: rgb(255, 255, 255);
-    font-weight: 900;
+    font-weight: 700;
     margin-left: 130px
 }
 .container{
@@ -95,11 +95,11 @@ body {
   @media (max-width:400px) {
   .h1{
     color: rgb(255, 255, 255);
-    font-weight: 54;
+    font-size: 54;
   }
   .h2{
      color: rgb(255, 255, 255);
-     font-weight: 54;
+     font-size: 42;
      margin-left: 60px
   }
   .flip-card {
