--- a/fcstyle.css
+++ b/fcstyle.css
@@ -96,6 +96,7 @@ body {
   @media (max-width:400px) {
   .h1{
     color: rgb(255, 255, 255);
+    font-weight: 800;
     font-size: 42;
   }
   .h2{
