--- a/fcstyle.css
+++ b/fcstyle.css
@@ -7,14 +7,14 @@ body {
 .h1{
     color: rgb(255, 255, 255);
     font-weight: 900;
-    font-size: 94
-    text-align: center
+    font-size: 128;
+    text-align: center;
 }
 .h2{
     color: rgb(255, 255, 255);
     font-weight: 700;
-    font-size: 72
-    text-align: center
+    font-size: 72;
+    text-align: center;
 }
 .container{
         display: flex;
